# gacha-sim

./: .env.example  pyproject.toml
src/gacha/: __main__.py  cost.py  engine.py  models.py  presets.py  session.py  settings.py
src/gacha/web/: app.py
src/gacha/web/api/: routes.py
src/gacha/web/templates/: base.html  index.html
src/gacha/web/templates/fragments/: banner_switched.html  custom_error.html  pull_result.html  stats.html
src/gacha/web/views/: routes.py
tests/: test_engine.py  test_models.py  test_routes.py
