[project]
name = "gacha-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "jinja2>=3.1.4",
    "structlog>=24.2.0",
    "cachetools>=5.3.3",
    "python-multipart>=0.0.9",
    "aiofiles>=25.1.0",
]

[project.scripts]
gacha = "gacha.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gacha"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-cachetools>=5.3.0",
    "types-aiofiles>=25.1.0.20260518",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
